<resources>
    <string name="app_name">Tourmate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cityadd">Add City</string>
    <string name="tdHint">Travel Destination</string>
    <string name="ebHint">Estimated Budget in TK</string>
    <string name="fdHint">From Date</string>
    <string name="todHint">To Date</string>
    <string name="eventBtn">Create Event</string>
    <string name="desName">Dhaka</string>
    <string name="estBudget">Est Budget : </string>
    <string name="expenseDetails">Expense Details</string>
    <string name="expenseAmount">Expense Amount in TK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign up</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="forget_password">Forget password?</string>
    <string name="user_name">User name*</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_display_image">DisplayImage</string>
    <string name="image_information">Image Information</string>
</resources>
