<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/ash2"
android:orientation="vertical">
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:title="Travel Event"
    android:background="@color/orange"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <TextView
        android:id="@+id/toolbar_title"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_gravity="center" />

</android.support.v7.widget.Toolbar>
<EditText
    android:id="@+id/desET"
    android:layout_marginTop="5sp"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:layout_margin="8sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    android:ems="10"
    android:padding="10sp"
    android:background="@drawable/shape_box"
    android:hint="@string/tdHint"/>
<EditText
    android:id="@+id/budgetET"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:layout_margin="5sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    android:ems="10"
    android:padding="10sp"
    android:background="@drawable/shape_box"
    android:inputType="numberDecimal"
    android:hint="@string/ebHint"/>
<EditText
    android:id="@+id/fromDateTV"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:layout_margin="5sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    android:ems="10"
    android:padding="10sp"
    android:inputType="datetime"
    android:background="@drawable/shape_box"
    android:drawableRight="@mipmap/cal"
    android:hint="@string/fdHint"/>

<EditText
    android:id="@+id/toDateTV"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:layout_margin="5sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    android:ems="10"
    android:padding="10sp"
    android:inputType="datetime"
    android:background="@drawable/shape_box"
    android:drawableRight="@mipmap/cal"
    android:hint="@string/todHint"/>
<LinearLayout
    android:layout_marginTop="8sp"
    android:layout_width="match_parent"
    android:layout_height="60sp"
    android:orientation="horizontal">
    <Button
        android:layout_margin="3sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/button_shape"
        android:text="@string/eventBtn"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:id="@+id/eventBtn"
        android:onClick="save"
        />
    <Button
        android:layout_margin="3sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/button_shape"
        android:visibility="invisible"
        android:text="Delete"
        android:onClick="Delete"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:id="@+id/deleteBtn"
        />
</LinearLayout>
<LinearLayout
    android:layout_marginTop="5sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@mipmap/tr1"
        android:id="@+id/imageView" />

    <ImageView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@mipmap/tr2"
        android:id="@+id/imageView2" />
</LinearLayout>

</LinearLayout>
