<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:id="@+id/cv"
        >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:id="@+id/destinationTV"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:textColor="@color/green"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:background="@drawable/shape_box"
                   android:text="@string/desName"/>
               <LinearLayout
                   android:layout_marginTop="20sp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <LinearLayout
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
                       <TextView
                           android:layout_gravity="center"
                           android:layout_weight="1"
                           android:layout_width="wrap_content"
                           android:layout_height="0dp"
                           android:textColor="@color/black"
                           android:textStyle="bold"
                           android:textSize="15sp"
                           android:text="@string/fdHint"/>
                       <TextView
                           android:id="@+id/fDateTV"
                           android:gravity="center"
                           android:layout_gravity="center"
                           android:layout_weight="1"
                           android:layout_width="130sp"
                           android:layout_height="0dp"
                           android:textColor="@color/black"
                           android:textStyle="bold"
                           android:background="@drawable/shape_box"
                           android:text="@string/fdHint"
                           android:textSize="16sp"/>
                   </LinearLayout>
                   <LinearLayout
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
                       <TextView
                           android:layout_gravity="center"
                           android:layout_weight="1"
                           android:layout_width="wrap_content"
                           android:layout_height="0dp"
                           android:textColor="@color/black"
                           android:textStyle="bold"
                           android:textSize="15sp"
                           android:text="@string/todHint"/>
                       <TextView
                           android:id="@+id/tDateTV"
                           android:gravity="center"
                           android:layout_gravity="center"
                           android:layout_weight="1"
                           android:layout_width="130sp"
                           android:layout_height="0dp"
                           android:textColor="@color/black"
                           android:textStyle="bold"
                           android:background="@drawable/shape_box"
                           android:text="@string/fdHint"
                           android:textSize="16sp"/>
                   </LinearLayout>
               </LinearLayout>
               <LinearLayout
                   android:layout_marginTop="15sp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:paddingLeft="5dp"
                       android:layout_gravity="center_vertical"
                       android:textColor="@color/black"
                       android:textStyle="bold"
                       android:layout_weight="1"
                       android:textSize="16sp"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="@string/estBudget"/>
                   <TextView
                       android:gravity="center"
                       android:layout_gravity="center"
                       android:textColor="@color/black"
                       android:textStyle="bold"
                       android:layout_weight="1"
                       android:id="@+id/estBudgetTV"
                       android:layout_width="0dp"
                       android:textSize="16sp"
                       android:text="15000 TK"
                       android:layout_height="wrap_content"
                       android:background="@drawable/shape_box"
                       />

               </LinearLayout>
               <ImageView
                   android:id="@+id/moneyBtn"
                   android:layout_marginTop="8sp"
                   android:layout_width="50sp"
                   android:layout_height="40sp"
                   android:textColor="@color/black"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:textAllCaps="false"
                   android:background="@mipmap/editicon"/>
               <LinearLayout
                   android:layout_marginTop="5sp"
                   android:background="@drawable/bottom_line_shape"
                   android:layout_width="match_parent"
                   android:layout_height="8sp">

               </LinearLayout>

           </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>